# slint_test_rust-main

./: Cargo.toml  LICENSE  Makefile  README.md  build.rs
SurrealismUI-main/src/dialog/: dialog.slint
resources/linux/: iced_tools.desktop
resources/osx/Slint_Tools.app/Contents/: Info.plist
resources/osx/Slint_Tools.app/Contents/Resources/: logo.icns
resources/windows/: res.rc
src/: lib.rs  main.rs
src/logic/: datetime.rs  get_result.rs  mod.rs  sql.rs  util.rs
ui/: main.slint  menubar.slint
ui/pages/: bottom.slint  datetime.slint  dialog.slint  login.slint  query.slint  sn_view.slint
