[package]
name = "tool_slint"
version = "0.1.1"
edition = "2021"
build = "build.rs"
[[bin]]
path = "src/main.rs"
name = "slint"

[dependencies]
slint = "1.2.2"
tiberius={version="0.12.2",features = ["chrono","tds73"],default-features = false}
tokio = { version = "1.33",features = ["full"]}
tokio-util = {version = "0.7.9", default-features = false, features = ["net","compat"]}
chrono = { version = "0.4.31", default-features = false }
futures = "0.3"

[build-dependencies]
slint-build = "1.2.2"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3

[target.'cfg(target_os = "macos")'.dependencies]
fruitbasket = "0.10.0"